Overlap fixes, footer added

--- a/less/pages.less
+++ b/less/pages.less
@@ -115,7 +115,7 @@
 
   &-1 {
     top: 80px;
-    left: 89px;
+    left: 130px;
     width: 820px;
     background-color: #b68424;
 
@@ -126,7 +126,7 @@
 
   &-2 {
     top: 260px;
-    left: 150px;
+    left: 210px;
     width: 820px;
     background-color: white;
 
@@ -137,7 +137,7 @@
 
   &-3 {
     top: 125px;
-    right: 230px;
+    right: 180px;
     width: 300px;
     background-color: #c7a156;
 
